--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "chatroom"
   ],
   "author": {
-    "name": "William Mora",
-    "email": "william.r.mora@gmail.com",
+    "name": "Xrana",
+    "email": "jaxonisback@outlook.com",
     "url":  "http://www.williammora.com/"
   },
   "homepage": "http://www.williammora.com/",
